--- a/css/main.css
+++ b/css/main.css
@@ -67,13 +67,15 @@ body {
 
 /* 상단영역 */
 .header {
-  position: relative;
+  position: absolute;
   display: block;
+  width: 100%;
 }
 
 .header .inner {
   position: relative;
   display: block;
+  z-index: 999;
 }
 
 .logo {
@@ -82,9 +84,9 @@ body {
   width: 221px;
   height: 44px;
   background: url('../images/logo-f.png') no-repeat center;
-  background-size: cover;
-  background-color: #333;
-  margin-top: 20px;
+  background-size: contain;
+  
+  margin-top: 29px;
   float: left;
 }
 
@@ -92,7 +94,6 @@ body {
   position: relative;
   display: block;
   float: left;
-  background-color: cadetblue;
   margin-left: 170px;
 }
 
@@ -128,7 +129,6 @@ body {
   float: right;
   width: 160px;
   height: 80px;
-  background-color: burlywood;
 }
 
 .header-btn-left {
@@ -166,7 +166,7 @@ body {
   display: block;
   
 }
-.lang-box-list:hover .lang-box-list > li{
+.lang-box-list > li:hover{
   background-color: #ddd;
   color: white;
   width: 100%;
@@ -175,20 +175,24 @@ body {
 .lang-box-list {  
   position: absolute;
   left: -1px;
-  top: 23px;
+  top: 30px;
   display: none;
   width: 60px;
-  
   border: 1px solid #fff;
   text-align: left;
-  padding-left: 9px;
-
 }
 
-.lang-box-list li {
+.lang-box-list > li {
   position: relative;
   display: block;
+  z-index: 99;
   
+}
+.lang-box-list > li > a{
+  position: relative;
+  display: block;
+  color: #fff;
+  margin-left: 9px;
 }
 .header-btn-right{
   position: relative;
@@ -217,7 +221,6 @@ body {
   position: absolute;
   right: 0;
   top: 9px;
-  
   display: block;
   width: 75%;
   height: 3px;
@@ -234,24 +237,127 @@ body {
   background-color: #fff;
 }
 
-/* 비디오 */
-.video {
+/* 비주얼 */
+.visual {
   position: relative;
   display: block;
-  
+}
+.video{
+  position: relative;
+  display: block;
+  width: 100%;
 }
 
 /* 제품정보 */
 .items {
   position: relative;
   display: block;
+  /* width: 100%; */
+  height: 486px;
+  background: url('../images/item-bg.png') no-repeat center;
+  background-size: cover;
 }
 
 .items .inner {
   position: relative;
   display: block;
+  height: 100%;
+  padding: 160px 70px;
+}
+.items-left{
+  position: relative;
+  display: block;
+  float: left;
+  
+}
+.items-left h2{
+  position: relative;
+  display: block;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 59px;
+  color: #fff;
+  margin-bottom: 25px;
+
+}
+.items-left p{
+  position: relative;
+  display: block;
+  font-size: 17px;
+  line-height: 28px;
+  color: #fff;
+  margin-bottom: 62px;
+}
+.items-left-button{
+  position: relative;
+  display: block;
+  width: 160px;
+  border: 1px solid #fff;
+  border-radius: 24px;
+  color: #fff;
+  padding: 10px 0;
+  padding-left: 23px;
+}
+.items-left-button:hover{
+  background: #fff;
+  color: #25ACC2;
 }
 
+.items-right{
+  position: relative;
+  display: block;
+  width: 723px;
+  height: 460px;
+  float: right;
+  padding-left: 77px;
+  padding-bottom: 58px;
+  
+}
+.sw-item{
+  width: 100%;
+  height: 100%;
+}
+.sw-item a{
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.item-1{
+  background: url('../images/itempc1.png') no-repeat center;
+  background-size: cover;
+}
+.item-2{
+  background: url('../images/itempc2.png') no-repeat center;
+  background-size: cover;
+}
+.item-3{
+  background: url('../images/itempc3.png') no-repeat center;
+  background-size: cover;
+}
+.item-4{
+  background: url('../images/itempc4.png') no-repeat center;
+  background-size: cover;
+}
+.item-5{
+  background: url('../images/itempc5.png') no-repeat center;
+  background-size: cover;
+}
+.sw-item-control{
+  position: absolute;
+  right: 73px;
+  bottom: 0px;
+  display: block;
+  z-index: 999;
+
+}
+.sw-item-pg{}
+.swiper-pagination-bullet{
+  width: 17px;
+  height: 17px;
+  background-color: #FFA937;
+  margin-right: 10px;
+}
 /* 회사소식 */
 .news {
   position: relative;
