3차코딩,애니매이션 업데이트

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,5 @@
 @charset 'utf-8';
-
-@import url('../font/NotoSansKR-Regular/NotoSansKR-Regular.css');
-@import url('../font/NotoSansKR-Medium/NotoSansKR-Medium.css');
-@import url('../font/NotoSansKR-Bold/NotoSansKR-Bold.css');
-@import url('../font/nanumsquare/nanumsquare.css');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&family=Titillium+Web:wght@300;400;600;700&display=swap');
 
 * {
   margin: 0;
@@ -33,12 +29,12 @@ html {
 
 
 body {
-  font-family: 'NotoSansKR', sans-serif, Malgun Gothic;
+  font-family: 'Noto Sans KR', sans-serif;
   font-weight: 400;
   font-size: 14px;
   letter-spacing: -0.4px;
   line-height: 1.6;
-  color: #888;
+  color: #222;
 }
 
 /* 공통(재사용) */
@@ -85,7 +81,7 @@ body {
   height: 44px;
   background: url('../images/logo-f.png') no-repeat center;
   background-size: contain;
-  
+
   margin-top: 29px;
   float: left;
 }
@@ -120,7 +116,7 @@ body {
   height: 80px;
   line-height: 100px;
   font-size: 17px;
-  font-weight: 700;
+
 }
 
 .header-btn {
@@ -152,7 +148,8 @@ body {
   font-weight: bold;
   color: #fff;
 }
-.lang-box::after{
+
+.lang-box::after {
   content: '';
   position: absolute;
   top: 11px;
@@ -162,17 +159,19 @@ body {
   height: 6px;
   background: url('../images/lang_arrow.png') no-repeat center;
 }
-.lang-box:hover .lang-box-list{
+
+.lang-box:hover .lang-box-list {
   display: block;
-  
+
 }
-.lang-box-list > li:hover{
+
+.lang-box-list>li:hover {
   background-color: #ddd;
   color: white;
   width: 100%;
 }
 
-.lang-box-list {  
+.lang-box-list {
   position: absolute;
   left: -1px;
   top: 30px;
@@ -182,32 +181,36 @@ body {
   text-align: left;
 }
 
-.lang-box-list > li {
+.lang-box-list>li {
   position: relative;
   display: block;
   z-index: 99;
-  
+
 }
-.lang-box-list > li > a{
+
+.lang-box-list>li>a {
   position: relative;
   display: block;
   color: #fff;
   margin-left: 9px;
 }
-.header-btn-right{
+
+.header-btn-right {
   position: relative;
   display: block;
 }
-.hb-bt{
+
+.hb-bt {
   position: absolute;
   top: 40px;
   right: 0;
   display: block;
   width: 35px;
   height: 21px;
-  
+
 }
-.hb-bt::before{
+
+.hb-bt::before {
   content: '';
   position: absolute;
   left: 0;
@@ -217,7 +220,8 @@ body {
   height: 3px;
   background-color: #fff;
 }
-.hb-bt span{
+
+.hb-bt span {
   position: absolute;
   right: 0;
   top: 9px;
@@ -226,7 +230,8 @@ body {
   height: 3px;
   background-color: #fff;
 }
-.hb-bt::after{
+
+.hb-bt::after {
   content: '';
   position: absolute;
   left: 0;
@@ -242,7 +247,8 @@ body {
   position: relative;
   display: block;
 }
-.video{
+
+.video {
   position: relative;
   display: block;
   width: 100%;
@@ -264,13 +270,15 @@ body {
   height: 100%;
   padding: 160px 70px;
 }
-.items-left{
+
+.items-left {
   position: relative;
   display: block;
   float: left;
-  
+
 }
-.items-left h2{
+
+.items-left h2 {
   position: relative;
   display: block;
   font-size: 48px;
@@ -280,7 +288,8 @@ body {
   margin-bottom: 25px;
 
 }
-.items-left p{
+
+.items-left p {
   position: relative;
   display: block;
   font-size: 17px;
@@ -288,7 +297,8 @@ body {
   color: #fff;
   margin-bottom: 62px;
 }
-.items-left-button{
+
+.items-left-button {
   position: relative;
   display: block;
   width: 160px;
@@ -298,12 +308,13 @@ body {
   padding: 10px 0;
   padding-left: 23px;
 }
-.items-left-button:hover{
+
+.items-left-button:hover {
   background: #fff;
   color: #25ACC2;
 }
 
-.items-right{
+.items-right {
   position: relative;
   display: block;
   width: 723px;
@@ -311,39 +322,47 @@ body {
   float: right;
   padding-left: 77px;
   padding-bottom: 58px;
-  
+
 }
-.sw-item{
+
+.sw-item {
   width: 100%;
   height: 100%;
 }
-.sw-item a{
+
+.sw-item a {
   position: relative;
   display: block;
   width: 100%;
   height: 100%;
 }
-.item-1{
+
+.item-1 {
   background: url('../images/itempc1.png') no-repeat center;
   background-size: cover;
 }
-.item-2{
+
+.item-2 {
   background: url('../images/itempc2.png') no-repeat center;
   background-size: cover;
 }
-.item-3{
+
+.item-3 {
   background: url('../images/itempc3.png') no-repeat center;
   background-size: cover;
 }
-.item-4{
+
+.item-4 {
   background: url('../images/itempc4.png') no-repeat center;
   background-size: cover;
 }
-.item-5{
+
+.item-5 {
   background: url('../images/itempc5.png') no-repeat center;
   background-size: cover;
 }
-.sw-item-control{
+
+.sw-item-control {
   position: absolute;
   right: 55px;
   bottom: 55px;
@@ -352,8 +371,10 @@ body {
   z-index: 999;
 
 }
-.sw-item-pg{}
-.sw-item-bt{
+
+.sw-item-pg {}
+
+.sw-item-bt {
   position: relative;
   display: block;
   width: 10px;
@@ -365,46 +386,354 @@ body {
   cursor: pointer;
   background-color: transparent;
 }
-.sw-item-bt span{
+
+.sw-item-bt span {
   position: absolute;
   top: -6px;
   left: -10px;
   display: block;
   font-size: 30px;
   color: #FFA937;
-  
-}
-.sw-item-bt-play{
 
 }
 
-.swiper-pagination-bullet{
+.sw-item-bt-play {}
+
+.swiper-pagination-bullet {
   width: 17px;
   height: 17px;
   background-color: #FFA937;
-  margin-right: 10px; 
+  margin-right: 10px;
   float: left;
 }
+
 /* 회사소식 */
 .news {
   position: relative;
   display: block;
+
+  margin-top: 200px;
+  background: #f6f6f7;
 }
 
 .news .inner {
   position: relative;
   display: block;
+  padding: 100px 70px;
+
+}
+
+.news h2 {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 59px;
+}
+
+.news .inner>p {
+  margin-top: 25px;
+  font-size: 17px;
+  line-height: 28px;
+  color: #191919;
+  margin-bottom: 40px;
+}
+
+.news-box {
+  position: relative;
+  display: block;
+}
+
+.news-list {
+  position: relative;
+  display: block;
+}
+
+.news-list li {
+  position: relative;
+  display: block;
+  margin-right: 40px;
+  float: left;
+}
+
+.news-list li:last-child {
+  margin-right: 0;
+}
+
+.news-1 {
+  position: relative;
+  display: block;
+  width: 347px;
+  height: 231px;
+  background: url('../images/news-1.jpg') no-repeat center;
+  background-size: contain;
+
+}
+
+.news-2 {
+  position: relative;
+  display: block;
+  width: 347px;
+  height: 231px;
+  background: url('../images/news-2.jpg') no-repeat center;
+  background-size: contain;
+}
+
+.news-3 {
+  position: relative;
+  display: block;
+  width: 347px;
+  height: 231px;
+  background: url('../images/news-3.jpg') no-repeat center;
+  background-size: contain;
+}
+
+.news-list li p {
+  color: #000;
+  margin-top: 20px;
+  line-height: 28px;
+
+  font-size: 15px;
+  text-align: center;
+}
+
+.news-more {
+  position: absolute;
+  right: 100px;
+  top: 165px;
+  display: block;
+  border: 1px solid #000;
+  border-radius: 24px;
+  width: 160px;
+  padding: 13px 0;
+  font-size: 15px;
+  font-weight: 500;
+  text-align: center;
+  color: #000;
+  background: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.news-more:hover {
+  background-color: #000;
+  color: #fff;
 }
 
 /* 정보모음 */
-.infor {
+.inves {
   position: relative;
+  display: block;
+  height: 640px;
+  background: url('../images/info-bg.jpg') no-repeat center fixed;
+  background-size: cover;
+}
+
+.inves .inner {
+  position: relative;
+  display: block;
+  height: 100%;
+
+}
+
+.inves-box {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 70px;
   display: block;
 }
 
-.infor .inner {
+.inves .inner h2 {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 59px;
+
+}
+
+.inves .inner p {
+  margin-top: 25px;
+  font-size: 17px;
+  line-height: 28px;
+  color: #191919;
+}
+
+.newproduct {
   position: relative;
   display: block;
+  height: 684px;
+  background: url('../images/newpro-bg.jpg') no-repeat center;
+  background-size: cover;
+}
+
+.newproduct .inner {
+  position: relative;
+  display: block;
+  height: 100%;
+}
+
+.newproduct-box {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 180px;
+  display: block;
+  animation: slide 1s ease-in;
+}
+
+@keyframes slide {
+  from {
+    margin-right: -100px;
+    opacity: 0;
+  }
+
+  to {
+    margin-right: 0px;
+    opacity: 1;
+  }
+}
+
+.newproduct-box h2 {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 59px;
+}
+
+.newproduct-box p {
+  margin-top: 25px;
+  font-size: 17px;
+  line-height: 28px;
+  color: #191919;
+}
+
+.newproduct-box-btn {
+  position: relative;
+  display: block;
+  border: 1px solid #000;
+  border-radius: 24px;
+  width: 160px;
+  margin-top: 50px;
+  margin-right: 4%;
+  text-align: center;
+  color: #000;
+  transition: all 0.3s;
+  padding: 13px 0;
+  font-size: 15px;
+  font-weight: 400;
+  background: none;
+  cursor: pointer;
+}
+
+.newproduct-box-btn:hover {
+  background-color: #222;
+  color: #fff;
+}
+
+.job {
+  position: relative;
+  display: block;
+  height: 520px;
+  background: url('../images/job-bg.jpg') no-repeat center;
+  background-size: cover;
+}
+
+.job .inner {
+  position: relative;
+  display: block;
+
+}
+
+.job-left {
+  position: relative;
+  display: block;
+  float: left;
+  margin-top: 200px;
+  margin-left: 70px;
+}
+
+.job-left h2 {
+  position: relative;
+  display: block;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 59px;
+  color: #fff;
+}
+
+.job-left p {
+  position: relative;
+  display: block;
+  font-weight: 300;
+  color: #fff;
+  line-height: 25px;
+  font-size: 17px;
+  margin-top: 25px;
+}
+
+.job-right {
+  position: relative;
+  display: block;
+  float: left;
+  
+  margin-top: 130px;
+  margin-left: 50px;
+}
+
+.job-right-list {
+  position: relative;
+  display: block;
+  text-align: center;
+}
+
+.job-right-list li {
+  position: relative;
+  display: block;
+  float: left;
+  width: 260px;
+  height: 260px;
+  background: #009AC2;
+  border-radius: 50%;
+  color: #fff;
+  text-align: center;
+  margin-left: 15px;
+  opacity: 0.8;
+  outline: none;
+  transition: all 0.5s
+}
+
+.job-right-title {
+  position: relative;
+  display: block;
+  font-size: 24px;
+  margin-bottom: 25px;
+  margin-top: 55px;
+  font-weight: 700;
+}
+
+.job-right-txt {
+  position: relative;
+  display: block;
+  font-size: 14px;
+  margin-bottom: 30px;
+  font-weight: 300;
+  line-height: 25px;
+  
+}
+
+.job-right-btn {
+  position: relative;
+  display: inline-block;
+  width: 96px;
+  padding: 8px 0;
+  border-radius: 15px;
+  border: 1px solid #fff;
+  color: #fff;
+  font-size: 14px;
+  transition: all 0.3s;
+  background: transparent;
+  cursor: pointer;
+}
+.job-right-btn:hover{
+  background: #fff;
+  color: #009AC2;
 }
 
 /* 하단영역 */
