--- a/css/main.css
+++ b/css/main.css
@@ -66,40 +66,44 @@ body {
   position: absolute;
   display: block;
   width: 100%;
+  transition: all 0.5s;
+  background-color: #FFA937;
+  z-index: 999;
+}
+
+.change {
+  background-color: #fff;
 }
 
 .header .inner {
-  position: relative;
   display: block;
   z-index: 999;
 }
 
 .logo {
-  position: relative;
   display: block;
   width: 221px;
   height: 44px;
   background: url('../images/logo-f.png') no-repeat center;
   background-size: contain;
-
   margin-top: 29px;
   float: left;
 }
 
 .gnb {
-  position: relative;
+
   display: block;
   float: left;
   margin-left: 170px;
 }
 
 .menu {
-  position: relative;
+
   display: block;
 }
 
 .menu>li {
-  position: relative;
+
   display: block;
   float: left;
   margin-right: 70px;
@@ -110,14 +114,79 @@ body {
 }
 
 .menu>li>a {
-  position: relative;
+
   display: block;
-  color: #fff;
+  /* color: #fff; */
   height: 80px;
   line-height: 100px;
   font-size: 17px;
 
 }
+
+.menu>li>a:hover {
+  color: #009ECC;
+}
+
+.sub-box {
+  position: absolute;
+  top: 80px;
+  left: 0;
+  display: block;
+  width: 100%;
+
+  padding: 32px 150px;
+
+}
+
+.sub-list {
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+
+  width: 100%;
+
+}
+
+.sub-list li {
+  position: relative;
+  display: block;
+  /* float: left; */
+
+}
+
+.sub-list li::after {
+  position: absolute;
+  top: 50%;
+  right: -25px;
+  content: '';
+  width: 3px;
+  height: 3px;
+  display: inline-block;
+  background:url('../images/sub_menu_dot.png') no-repeat center;
+}
+.sub-list li::after:last-child{
+  display: none;
+}
+
+.sub-list li a {
+  position: relative;
+  display: block;
+  font-size: 16px;
+  /* color: #fff; */
+}
+
+.sub-box-bg {
+  position: absolute;
+  top: 80px;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 80px;
+  background: #20a4d4;
+  opacity: 0.77;
+  z-index: 99;
+}
+
 
 .header-btn {
   position: relative;
@@ -381,23 +450,14 @@ body {
   height: 15px;
   border: 0;
   float: left;
-  font-family: 'Material Icons';
   margin-right: 15px;
   cursor: pointer;
-  background-color: transparent;
+  background: url('../images/btn_pause.png') no-repeat center;
 }
 
-.sw-item-bt span {
-  position: absolute;
-  top: -6px;
-  left: -10px;
-  display: block;
-  font-size: 30px;
-  color: #FFA937;
-
+.sw-item-bt-play {
+  background: url('../images/btn_play.png') no-repeat center;
 }
-
-.sw-item-bt-play {}
 
 .swiper-pagination-bullet {
   width: 17px;
@@ -672,7 +732,7 @@ body {
   position: relative;
   display: block;
   float: left;
-  
+
   margin-top: 130px;
   margin-left: 50px;
 }
@@ -715,7 +775,7 @@ body {
   margin-bottom: 30px;
   font-weight: 300;
   line-height: 25px;
-  
+
 }
 
 .job-right-btn {
@@ -731,7 +791,8 @@ body {
   background: transparent;
   cursor: pointer;
 }
-.job-right-btn:hover{
+
+.job-right-btn:hover {
   background: #fff;
   color: #009AC2;
 }
